@@ -24,18 +24,19 @@ package io.crate.metadata.cluster;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.elasticsearch.cluster.metadata.IndexMetadata.INDEX_ROUTING_EXCLUDE_GROUP_PREFIX;
 import static org.elasticsearch.cluster.metadata.IndexMetadata.SETTING_CREATION_DATE;
+import static org.elasticsearch.cluster.metadata.IndexMetadata.SETTING_INDEX_VERSION_CREATED;
 import static org.elasticsearch.cluster.metadata.IndexMetadata.SETTING_NUMBER_OF_SHARDS;
+import static org.elasticsearch.cluster.metadata.IndexMetadata.SETTING_VERSION_CREATED;
 import static org.elasticsearch.common.settings.AbstractScopedSettings.ARCHIVED_SETTINGS_PREFIX;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.containsInAnyOrder;
 
 import java.io.IOException;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
+import org.elasticsearch.Version;
 import org.elasticsearch.cluster.ClusterState;
+import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.metadata.IndexTemplateMetadata;
 import org.elasticsearch.cluster.metadata.Metadata;
 import org.elasticsearch.common.settings.IndexScopedSettings;
@@ -75,12 +76,12 @@ public class AlterTableClusterStateExecutorTest {
             AlterTableClusterStateExecutor.updateTemplate(initialState,
                                                           relationName,
                                                           settings,
-                                                          Collections.emptyMap(),
-                                                          (x, y) -> { },
+                                                          Map.of(),
+                                                          (_, _) -> { },
                                                           indexScopedSettings);
 
         IndexTemplateMetadata template = result.metadata().templates().get(templateName);
-        assertThat(template.settings().keySet(), contains(SETTING_NUMBER_OF_SHARDS));
+        assertThat(template.settings().keySet()).containsExactly(SETTING_NUMBER_OF_SHARDS);
     }
 
     @Test
@@ -88,7 +89,7 @@ public class AlterTableClusterStateExecutorTest {
         Settings.Builder builder = Settings.builder()
             .put(SETTING_NUMBER_OF_SHARDS, 4);
         Settings preparedSettings = AlterTableClusterStateExecutor.markArchivedSettings(builder.build());
-        assertThat(preparedSettings.keySet(), containsInAnyOrder(SETTING_NUMBER_OF_SHARDS, ARCHIVED_SETTINGS_PREFIX + "*"));
+        assertThat(preparedSettings.keySet()).containsExactlyInAnyOrder(SETTING_NUMBER_OF_SHARDS, ARCHIVED_SETTINGS_PREFIX + "*");
     }
 
     @Test
@@ -101,10 +102,45 @@ public class AlterTableClusterStateExecutorTest {
             .supportedSettings()
             .values()
             .stream()
-            .collect(Collectors.toList());
+            .toList();
 
         Settings filteredSettings = AlterTableClusterStateExecutor.filterSettings(settingToFilter, supportedSettings);
         assertThat(filteredSettings.isEmpty()).isFalse();
         assertThat(filteredSettings.get(fullName)).isEqualTo("node1");
+    }
+
+    @Test
+    public void test_altering_settings_do_not_modify_version_created() throws IOException {
+        IndexScopedSettings indexScopedSettings = IndexScopedSettings.DEFAULT_SCOPED_SETTINGS;
+
+        RelationName relationName = new RelationName(Schemas.DOC_SCHEMA_NAME, "t1");
+        String templateName = PartitionName.templateName(relationName.schema(), relationName.name());
+
+        final Version v = Version.V_5_4_0;
+
+        Settings settings = Settings.builder()
+            .put(IndexMetadata.SETTING_VERSION_CREATED, v)
+            .build();
+        IndexTemplateMetadata indexTemplateMetadata = IndexTemplateMetadata.builder(templateName)
+            .patterns(Collections.singletonList("*"))
+            .settings(settings)
+            .putMapping("{\"default\": {}}")
+            .build();
+
+        ClusterState initialState = ClusterState.builder(ClusterState.EMPTY_STATE)
+            .metadata(Metadata.builder().put(indexTemplateMetadata))
+            .build();
+
+        ClusterState result =
+            AlterTableClusterStateExecutor.updateTemplate(initialState,
+                relationName,
+                settings,
+                Map.of(),
+                (_, _) -> { },
+                indexScopedSettings);
+
+        IndexTemplateMetadata template = result.metadata().templates().get(templateName);
+        assertThat(template.settings().keySet()).containsExactly(SETTING_VERSION_CREATED);
+        assertThat(SETTING_INDEX_VERSION_CREATED.get(template.settings())).isEqualTo(v);
     }
 }
