@@ -23,6 +23,7 @@ package io.crate.planner.statement;
 
 import static io.crate.testing.Asserts.assertThat;
 import static java.util.Collections.singletonList;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.Mockito.mock;
 
@@ -34,8 +35,6 @@ import org.elasticsearch.common.settings.Settings;
 import org.junit.Before;
 import org.junit.Test;
 
-import com.carrotsearch.randomizedtesting.RandomizedTest;
-
 import io.crate.analyze.TableDefinitions;
 import io.crate.data.Row;
 import io.crate.execution.dsl.phases.RoutedCollectPhase;
@@ -44,7 +43,7 @@ import io.crate.execution.dsl.projection.builder.ProjectionBuilder;
 import io.crate.metadata.PartitionName;
 import io.crate.metadata.Reference;
 import io.crate.metadata.RelationName;
-import io.crate.metadata.doc.DocSysColumns;
+import io.crate.metadata.doc.SysColumns;
 import io.crate.planner.DependencyCarrier;
 import io.crate.planner.Merge;
 import io.crate.planner.node.dql.Collect;
@@ -58,7 +57,9 @@ public class CopyToPlannerTest extends CrateDummyClusterServiceUnitTest {
 
     @Before
     public void prepare() throws IOException {
-        e = SQLExecutor.builder(clusterService, 2, RandomizedTest.getRandom(), List.of())
+        e = SQLExecutor.builder(clusterService)
+            .setNumNodes(2)
+            .build()
             .addTable(TableDefinitions.USER_TABLE_DEFINITION)
             .addPartitionedTable(
                 "create table parted (" +
@@ -78,22 +79,24 @@ public class CopyToPlannerTest extends CrateDummyClusterServiceUnitTest {
                 ") partitioned by (day) ",
                 new PartitionName(new RelationName("doc", "parted_generated"), List.of("1395874800000")).asIndexName(),
                 new PartitionName(new RelationName("doc", "parted_generated"), List.of("1395961200000")).asIndexName()
-            ).build();
+            );
     }
 
     private <T> T plan(String stmt) {
         CopyToPlan plan = e.plan(stmt);
         var boundedCopyTo = CopyToPlan.bind(
             plan.copyTo(),
-            e.getPlannerContext(clusterService.state()).transactionContext(),
-            e.getPlannerContext(clusterService.state()).nodeContext(),
+            e.getPlannerContext().transactionContext(),
+            e.getPlannerContext().nodeContext(),
             Row.EMPTY,
-            SubQueryResults.EMPTY);
+            SubQueryResults.EMPTY,
+            e.getPlannerContext().clusterState().metadata()
+        );
         //noinspection unchecked
         return (T) CopyToPlan.planCopyToExecution(
             mock(DependencyCarrier.class),
             boundedCopyTo,
-            e.getPlannerContext(clusterService.state()),
+            e.getPlannerContext(),
             e.planStats(),
             new ProjectionBuilder(e.nodeCtx),
             Row.EMPTY,
@@ -105,10 +108,10 @@ public class CopyToPlannerTest extends CrateDummyClusterServiceUnitTest {
         Merge plan = plan("copy users (name) to directory '/tmp'");
         Collect innerPlan = (Collect) plan.subPlan();
         RoutedCollectPhase node = ((RoutedCollectPhase) innerPlan.collectPhase());
-        Reference nameRef = (Reference) node.toCollect().get(0);
+        Reference nameRef = (Reference) node.toCollect().getFirst();
 
-        assertThat(nameRef.column().name()).isEqualTo(DocSysColumns.DOC.name());
-        assertThat(nameRef.column().path().get(0)).isEqualTo("name");
+        assertThat(nameRef.column().name()).isEqualTo(SysColumns.DOC.name());
+        assertThat(nameRef.column().path().getFirst()).isEqualTo("name");
     }
 
     @Test
@@ -117,7 +120,7 @@ public class CopyToPlannerTest extends CrateDummyClusterServiceUnitTest {
         Merge plan = plan("copy parted_generated to directory '/tmp'");
         Collect innerPlan = (Collect) plan.subPlan();
         RoutedCollectPhase node = ((RoutedCollectPhase) innerPlan.collectPhase());
-        WriterProjection projection = (WriterProjection) node.projections().get(0);
+        WriterProjection projection = (WriterProjection) node.projections().getFirst();
         assertThat(projection.overwrites()).isEmpty();
     }
 
@@ -146,10 +149,9 @@ public class CopyToPlannerTest extends CrateDummyClusterServiceUnitTest {
 
     @Test
     public void testCopyToPlanWithParameters() {
-        Merge merge = plan("copy users to directory '/path/to' with (protocol='http', wait_for_completion=false)");
+        Merge merge = plan("copy users to directory '/path/to' with (wait_for_completion=false)");
         Collect collect = (Collect) merge.subPlan();
-        WriterProjection writerProjection = (WriterProjection) collect.collectPhase().projections().get(0);
-        assertThat(writerProjection.withClauseOptions().get("protocol")).isEqualTo("http");
+        WriterProjection writerProjection = (WriterProjection) collect.collectPhase().projections().getFirst();
         assertThat(writerProjection.withClauseOptions().getAsBoolean(
             "wait_for_completion", true)).isFalse();
 
@@ -158,8 +160,8 @@ public class CopyToPlannerTest extends CrateDummyClusterServiceUnitTest {
             merge = plan(
                 "copy users to directory '/path/to' with (compression=" + compression + ")");
             collect = (Collect) merge.subPlan();
-            writerProjection = (WriterProjection) collect.collectPhase().projections().get(0);
-            assertThat(writerProjection.withClauseOptions().size()).isEqualTo(1);
+            writerProjection = (WriterProjection) collect.collectPhase().projections().getFirst();
+            assertThat(writerProjection.withClauseOptions()).hasSize(1);
             if (compression.equals("''")) {
                 assertThat(writerProjection.withClauseOptions().get("compression")).isEmpty();
             } else {
@@ -170,7 +172,25 @@ public class CopyToPlannerTest extends CrateDummyClusterServiceUnitTest {
         // verify defaults:
         merge = plan("copy users to directory '/path/to/'");
         collect = (Collect) merge.subPlan();
-        writerProjection = (WriterProjection) collect.collectPhase().projections().get(0);
+        writerProjection = (WriterProjection) collect.collectPhase().projections().getFirst();
         assertThat(writerProjection.withClauseOptions()).isEqualTo(Settings.EMPTY);
+    }
+
+    @Test
+    public void copy_to_protocol_in_with_clause_is_not_rejected() {
+        // We do unknown or irrelevant property validation for "file" scheme in the server module.
+        // Verify that properties of a non-file scheme are not rejected.
+        // They are supposed to be validated later in a plugin, implementing the scheme.
+        Merge merge = plan("COPY users to DIRECTORY 's3://bucket' WITH (protocol='http')");
+        Collect collect = (Collect) merge.subPlan();
+        WriterProjection writerProjection = (WriterProjection) collect.collectPhase().projections().getFirst();
+        assertThat(writerProjection.withClauseOptions().get("protocol")).isEqualTo("http");
+    }
+
+    @Test
+    public void copy_to_unknown_property_in_with_clause_is_rejected() {
+        assertThatThrownBy(() -> plan("COPY users TO DIRECTORY '/some/distant/file.ext' WITH (dummy='dummy')"))
+            .isExactlyInstanceOf(IllegalArgumentException.class)
+            .hasMessage("Setting 'dummy' is not supported");
     }
 }
